--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "d3": "^5.9.7",
     "prop-types": "^15.7.2",
@@ -16,7 +15,9 @@
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.2.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
