--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "d3": "^5.9.7",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-bootstrap-typeahead": "^3.4.6",
     "react-d3-radar": "^1.0.0-rc6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
